lab1/Test/L1-A-10-54.output
Error Type A at Line 18
Error Type A at Line 22
Error Type A at Line 41
Error Type B at Line 51
Error Type B at Line 61
